[package]
name = "co2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = { version = "2.9.0", features = ["bytemuck"] }
bon = "3.6.3"
bumpalo = { version = "3.17.0", features = ["boxed", "collections"] }
bytemuck = { version = "1.23.0", features = ["derive"] }
itertools = "0.14.0"
thiserror = "2.0.12"
unicode-ident = "1.0.18"
winnow = "0.7.7"
